--- a/01. SOLID/01. SOLID - Exercises/P02_Blobs/P02_Blobs.csproj
+++ b/01. SOLID/01. SOLID - Exercises/P02_Blobs/P02_Blobs.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Controller.cs" />
     <Compile Include="Entities\Attacks\Attack.cs" />
     <Compile Include="Entities\Attacks\Blobplode.cs" />
     <Compile Include="Entities\Attacks\PutridFart.cs" />
@@ -49,6 +50,8 @@
     <Compile Include="Entities\Behaviors\Aggressive.cs" />
     <Compile Include="Entities\Behaviors\Inflated.cs" />
     <Compile Include="Entities\Blob.cs" />
+    <Compile Include="Factories\BlobFactory.cs" />
+    <Compile Include="Factories\GenericFactory.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\IBehavior.cs" />
     <Compile Include="Program.cs" />
@@ -57,8 +60,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Core\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
