--- a/01. SOLID/01. SOLID - Exercises/P02_Blobs/P02_Blobs.csproj
+++ b/01. SOLID/01. SOLID - Exercises/P02_Blobs/P02_Blobs.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Factories\GenericFactory.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\IBehavior.cs" />
+    <Compile Include="Interfaces\IReader.cs" />
+    <Compile Include="Interfaces\IWriter.cs" />
+    <Compile Include="IO\ConsoleReader.cs" />
+    <Compile Include="IO\ConsoleWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
