Problem 2. Blobs Bonus Task 7 - Blob Events

--- a/01. SOLID/01. SOLID - Exercises/P02_Blobs/P02_Blobs.csproj
+++ b/01. SOLID/01. SOLID - Exercises/P02_Blobs/P02_Blobs.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\ReportEventHandler.cs" />
     <Compile Include="Core\Controller.cs" />
     <Compile Include="Entities\Attacks\Attack.cs" />
     <Compile Include="Entities\Attacks\Blobplode.cs" />
