--- a/08. BashSoft/BashSoft/BashSoft.csproj
+++ b/08. BashSoft/BashSoft/BashSoft.csproj
@@ -42,14 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Execptions\DuplicateEntryInStructureException.cs" />
-    <Compile Include="Execptions\InvalidCommandException.cs" />
-    <Compile Include="Execptions\InvalidFileNameException.cs" />
-    <Compile Include="Execptions\InvalidNumberParseException.cs" />
-    <Compile Include="Execptions\InvalidPathException.cs" />
-    <Compile Include="Execptions\InvalidStringException.cs" />
-    <Compile Include="Execptions\InvalidTakeQueryParamterException.cs" />
-    <Compile Include="Execptions\CourseNotFoundException .cs" />
+    <Compile Include="Contracts\IDirectoryChanger.cs" />
+    <Compile Include="Contracts\IDirectoryCreator.cs" />
+    <Compile Include="Contracts\IDirectoryTraverser.cs" />
+    <Compile Include="Contracts\IExecutable.cs" />
+    <Compile Include="Exceptions\DuplicateEntryInStructureException.cs" />
+    <Compile Include="Exceptions\InvalidCommandException.cs" />
+    <Compile Include="Exceptions\InvalidFileNameException.cs" />
+    <Compile Include="Exceptions\InvalidNumberParseException.cs" />
+    <Compile Include="Exceptions\InvalidPathException.cs" />
+    <Compile Include="Exceptions\InvalidStringException.cs" />
+    <Compile Include="Exceptions\InvalidTakeQueryParameterException.cs" />
+    <Compile Include="Exceptions\CourseNotFoundException .cs" />
     <Compile Include="IO\CommandInterpreter.cs" />
     <Compile Include="IO\Commands\ChangePathAbsoluteCommand.cs" />
     <Compile Include="IO\Commands\ChangePathRelativelyCommand.cs" />
@@ -64,6 +68,9 @@
     <Compile Include="IO\Commands\ReadDatabaseFromFileCommand.cs" />
     <Compile Include="IO\Commands\ShowWantedDataCommand.cs" />
     <Compile Include="IO\Commands\TraverseFoldersCommand.cs" />
+    <Compile Include="Contracts\IInterpreter.cs" />
+    <Compile Include="Contracts\IDirectoryManager.cs" />
+    <Compile Include="Contracts\IReader.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Static data\ExceptionMessages.cs" />
