Part II. Generics, Iterators and Comparators Problem 4. Adding the new DisplayCommand Problem 5. Testing our new Functionality

--- a/08. BashSoft/BashSoft/BashSoft.csproj
+++ b/08. BashSoft/BashSoft/BashSoft.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Contracts\Models\ICourse.cs" />
     <Compile Include="Contracts\Models\IStudent.cs" />
     <Compile Include="Contracts\Judge\IContentComparer.cs" />
+    <Compile Include="IO\Commands\DisplayCommand.cs" />
     <Compile Include="Models\SoftUniCourse.cs" />
     <Compile Include="Models\SoftUniStudent.cs" />
     <Compile Include="Contracts\Repository\IDatabase.cs" />
