Part II. Generics, Iterators and Comparators Problem 6. * BONUS TASK: Implement Your Own Sorting Algorithm for the SimpleSortedList BubbleSort (easy difficulty) SelectionSort (easy difficulty) InsertionSort (medium difficulty) QuickSort (hard difficulty)

--- a/08. BashSoft/BashSoft/BashSoft.csproj
+++ b/08. BashSoft/BashSoft/BashSoft.csproj
@@ -47,10 +47,15 @@
     <Compile Include="Contracts\IO\IDirectoryCreator.cs" />
     <Compile Include="Contracts\IO\IDirectoryTraverser.cs" />
     <Compile Include="Contracts\IO\IExecutable.cs" />
+    <Compile Include="Contracts\DataStructures\SortingStrategies\ISort.cs" />
     <Compile Include="Contracts\Repository\IFilteredTaker.cs" />
     <Compile Include="Contracts\Repository\IOrderedTaker.cs" />
     <Compile Include="Contracts\Repository\IRequester.cs" />
     <Compile Include="DataStructures\SimpleSortedList.cs" />
+    <Compile Include="DataStructures\SortingStrategies\BubbleSort.cs" />
+    <Compile Include="DataStructures\SortingStrategies\InsertionSort.cs" />
+    <Compile Include="DataStructures\SortingStrategies\QuickSort.cs" />
+    <Compile Include="DataStructures\SortingStrategies\SelectionSort.cs" />
     <Compile Include="Exceptions\DuplicateEntryInStructureException.cs" />
     <Compile Include="Exceptions\InvalidCommandException.cs" />
     <Compile Include="Exceptions\InvalidFileNameException.cs" />
