Part III. Reflection & Attributes Problem 1. Making the Alias Attribute

--- a/08. BashSoft/BashSoft/BashSoft.csproj
+++ b/08. BashSoft/BashSoft/BashSoft.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\AliasAttribute.cs" />
+    <Compile Include="Attributes\InjectAttribute.cs" />
     <Compile Include="Contracts\DataStructures\ISimpleOrderedBag.cs" />
     <Compile Include="Contracts\IO\IDirectoryChanger.cs" />
     <Compile Include="Contracts\IO\IDirectoryCreator.cs" />
